RESOLVED FIXED20942
Repeated messages in resources don't collapse
https://bugs.webkit.org/show_bug.cgi?id=20942
Summary Repeated messages in resources don't collapse
Kevin McCullough
Reported 2008-09-19 11:08:56 PDT
In the resources view, if there are multiple of the same message, it is shown multiple times. We should just collapse it and say how many times it repeated.
Attachments
Kevin McCullough
Comment 1 2008-09-19 14:56:45 PDT
Committed revision 36678.
Note You need to log in before you can comment on or make changes to this bug.